Error popup when clicking on deleted files in Recent Files menus

The "Recent Files" menus opened a blank file when clicking on a file that had been deleted.

The changes in code display an error popup with the message  "This file does not exist" if such a file entry is clicked in the Recent Files Menu

BUG: 472481